--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server"
   ],
   "scripts": {
+    "dev": "concurrently \"npm run dev -w=client\" \"npm run serve -w=server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/maciej-kolodziejczak/fem-invoice-app/issues"
   },
-  "homepage": "https://github.com/maciej-kolodziejczak/fem-invoice-app#readme"
+  "homepage": "https://github.com/maciej-kolodziejczak/fem-invoice-app#readme",
+  "devDependencies": {
+    "concurrently": "^7.1.0"
+  }
 }
